[package]
name = "home-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
postgres = "0.19.8"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full", "tracing"] }
tokio-postgres = "0.7.11"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-subscriber = "0.3.18"
